# libmahjong-rs

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml
src/: lib.rs  observe.rs  settings.rs
src/ffi/: controller_manager.rs  error.rs  event.rs  gamesettings.rs  gamestate.rs  mod.rs  observe.rs  piece.rs  player_controller.rs  settings.rs  wind.rs
